--- a/website/templates/website/includes/navbar.html
+++ b/website/templates/website/includes/navbar.html
@@ -13,7 +13,7 @@
 
             {% if tab == "home" %}
 
-            <form class="d-flex m-auto 2 form" role="search" action="{% url 'home-page'%}" method="post">
+            <form class="d-flex m-auto 2 form"  action="{% url 'home-page'%}" method="POST" name="searcher">
                 {% csrf_token%}
                 <select name="category" class="form-control mx-2" id="" > 
                     <option value=""><small>--- ALL ---</small></option>
@@ -27,7 +27,7 @@
 
                 </select>
                 <input id="search" class="form-control me-2 search" value="{{ search_value }}" type="search" name="search_value" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <button class="btn btn-outline-success" name="searcher" type="submit">Search</button>
             </form>
                 
             {% endif %}
@@ -73,10 +73,10 @@
                         <li><a class="dropdown-item" href="/admin">Admin</a></li>
                     </ul>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link {% if tab == 'cart' %}active{% endif %}
                     " aria-current="page" href="{% url 'cart-page' %}">Cart</a>
-                </li>
+                </li> -->
                 <!-- <li class="nav-item">
                     <a data-bs-toggle="offcanvas" href="#cart" role="button" aria-controls="offcanvasExample"  class="nav-link"  aria-disabled="true">Cart</a>
                 </li> -->
