--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -112,4 +112,29 @@
       {% endfor %}
     </div>
 
+    <!-- pagination -->
+    <div class="mt-2">
+      <nav aria-label="Page navigation example">
+          <ul class="pagination">
+              {% if products.has_previous %}
+              <li class="page-item"><a class="page-link" href="?page=1">First</a></li>
+              <li class="page-item"><a class="page-link" href="?page={{products.previous_page_number}}">Previous</a></li>
+              {% endif %}
+            
+            <!-- <li class="page-item"><a class="page-link" href="#">1</a></li> -->
+            <li class="page-item"><a class="page-link" href="?page={{ products.number }}">Page {{ products.number }} of {{ products.paginator.num_pages }}</a></li>
+  
+            {% if products.has_next %}
+  
+            <li class="page-item"><a class="page-link" href="?page={{products.next_page_number}}">Next</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{products.paginator.num_pages}}">Last</a></li>
+              
+            {% endif %}
+  
+  
+            
+          </ul>
+        </nav>
+  </div>
+
 {% endblock structure %}
