--- a/website/templates/website/contacts.html
+++ b/website/templates/website/contacts.html
@@ -30,6 +30,32 @@
         </table>
     </div>
 </div>
+
+<!-- pagination -->
+<div class="mt-2">
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            {% if contacts.has_previous %}
+            <li class="page-item"><a class="page-link" href="?page=1">First</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{contacts.previous_page_number}}">Previous</a></li>
+            {% endif %}
+          
+          <!-- <li class="page-item"><a class="page-link" href="#">1</a></li> -->
+          <li class="page-item"><a class="page-link" href="?page={{ contacts.number }}">Page {{ contacts.number }} of {{ contacts.paginator.num_pages }}</a></li>
+
+          {% if contacts.has_next %}
+
+          <li class="page-item"><a class="page-link" href="?page={{contacts.next_page_number}}">Next</a></li>
+          <li class="page-item"><a class="page-link" href="?page={{contacts.paginator.num_pages}}">Last</a></li>
+            
+          {% endif %}
+
+
+          
+        </ul>
+      </nav>
+</div>
+
 {% else %}
     <center>No Contacts Available</center>
 {% endif %}
